<resources>
    <string name="app_name">GeofencingAlerts</string>
    <string name="button_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addgeoalert">Add GeoFence Alert</string>
    <string name="view_map">View Map</string>
    <string name="create_geo_fence">Create GeoFence</string>
    <string name="name">Name</string>
    <string name="radius">Radius in (meters)</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="create_alert">Create Alert</string>
    <string name="cellphone">Cellphone</string>
    <string name="message">Message</string>
    <string name="add_geofence_alert">ADD Geofence Alert</string>
    <string name="world_geofence_alert">World geofence alert</string>
</resources>