<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StartFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/world_geofence_alert"
        android:layout_marginTop="32dp"
        style="@style/style_txt_subtittle_size_24"
        />


    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/mapvector" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        >

        <Button
            android:id="@+id/buttonViewMap"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:text="@string/view_map"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/buttonAddGeoAlert"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:text="@string/addgeoalert"
            app:layout_constraintTop_toBottomOf="@id/buttonViewMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>